[package]
name = "speed-levels-rs"
version = "0.2.3"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/lu-zero/speed-levels-rs"
description = "speed-level benchmark for AV1 encoders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1"
regex = "1"
csv = "1.1"
spreadsheet-ods = "0.5"
dirs-next = "2.0"
lazy_static = "1.4"
platform-info = "0.1"

